@@ -1,6 +1,9 @@
 mountall (2.13) UNRELEASED; urgency=low
 
-  * 
+  * Once a mountpoint has been skipped, don't try and mount it again
+    (unless the udev device actually shows up).  LP: #553290.
+  * Skipping a filesystem means we should also skip anything that depends
+    on that (ie. skip /usr/local when skipping /usr).
 
  -- Scott James Remnant <scott@ubuntu.com>  Fri, 16 Apr 2010 14:36:49 -0700
 
